
Thu Aug 3 11:51:14 EDT 1995	Paul Park	(pjpark@mit.edu)
	* alt_prof.c - Actually pass back the parsed string value in krb5_aprof_
		get_deltat().


Mon Jul 31 15:52:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_kw_{enc,dec}.c - Add support for new kadmin protocol.
	* alt_prof.c - Remove string conversion routine, use the ones in str_
		conv.c.  Convert krb5_read_realm_params() to use these string
		conversion routines so that the KDC profile is more textual
		as opposed to being numeric.
	* str_conv.c - String conversion routines.
	* Makefile.in, configure.in - Add support for str_conv.c
	* t_dbentry.c - Test new kadmin protocol.

Mon Jul 17 15:16:26 EDT 1995	Paul Park	(pjpark@mit.edu)
	* alt_prof.c - Add krb5_{read,free}_realm_params() to read in per-
		realm KDC data and to free the allocated structure.

Mon Jul 10 17:59:23 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* adm_kt_dec.c, adm_kt_enc.c, adm_kw_dec.c, adm_kw_enc.c,
		alt_prof.c, logger.c: Include adm_proto.h for prototypes.

Fri Jul 7 16:23:57 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove LDFLAGS, it's set by configure.  Find com_err
		library in TOPLIBD now.

Thu Jul  6 17:34:22 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>

	* adm_conn.c (kadm_get_creds): Pass kcontext to os_localaddr.

Tue Jun 27 15:50:31 EDT 1995	Paul Park	(pjpark@mit.edu)
	* alt_prof.c - Change filename and hierarchy lists to be const char.


Thu Jun 22 11:56:15 EDT 1995	Paul Park	(pjpark@mit.edu)
	* alt_prof.c - New jacket routines for handling profiles.  This includes
		the ability to parse certain string values to appropriate types
		(e.g. delta time or 32-bit integer).
	* Makefile.in - Add alt_prof.c


Thu Jun 15 18:03:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove explicit copying of archive library to library
		directory.
	* configure.in - Create symlink for archive when we build it.

Wed Jun 14 14:36:13 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>
