@@ -1,4 +1,8 @@
 
+Fri Aug 4 16:21:50 EDT 1995	Paul Park	(pjpark@mit.edu)
+	* Makefile.in, .Sanitize, keysalt.c - Add keysalt.c modules.
+
+
 Thu Aug 3 11:51:14 EDT 1995	Paul Park	(pjpark@mit.edu)
 	* alt_prof.c - Actually pass back the parsed string value in krb5_aprof_
 		get_deltat().
